made some changes

--- a/CODE_dizzys/refreshDIZZYS_2015_10_23/dizzyslan4/dizzysNewInfec/inst/doc/dizzysNewInfec.tex
+++ b/CODE_dizzys/refreshDIZZYS_2015_10_23/dizzyslan4/dizzysNewInfec/inst/doc/dizzysNewInfec.tex
@@ -20,8 +20,8 @@
 \begin{document}
 \input{dizzysNewInfec-concordance}
 
-\title{$\mathbf{dizzys}$: efficient deterministic/stochastic simulations
-in R for a metapopulation by using SIR/SEIR models}
+\title{$\mathbf{dizzys}$: Efficient deterministic/stochastic simulations
+for metapopulation SIR/SEIR models of epidemics by integrating C++ into R}
 
 
 \author{TRAN Thi Cam Giang}
