--- a/article_JDZ_MC/model_ver06.tex
+++ b/article_JDZ_MC/model_ver06.tex
@@ -998,12 +998,14 @@ R_{i}^{*} & = & N_{i}-S_{i}^{*}-E_{i}^{*}-I_{i}^{*}
 \end{eqnarray}
 
 
-One nomal conditions for all population availabes is that the equilibrium
+One normal conditions for all population variables is that the equilibrium
 values cannot be negative. Therefore, an infectious disease is available
 in the $subpopulation_{i}$ if $R_{0}>1$. Now, the endemic equilibrium
 in the system is given by $(S_{i}^{*},E_{i}^{*},I{}_{i}^{*},R{}_{i}^{*})$
 = $(N_{i}\frac{1}{R_{0}}$, $N_{i}\frac{\mu\sigma}{R_{0}}\left(R_{0}-1\right)$,
-$N_{i}\frac{\mu}{\beta}(R_{0}-1)$, $N_{i}(1-\frac{1}{R_{0}}-\frac{\mu\sigma}{R_{0}}\left(R_{0}-1\right)-\frac{\mu}{\beta}(R_{0}-1))$.\newpage{}
+$N_{i}\frac{\mu}{\beta}(R_{0}-1)$, $N_{i}(1-\frac{1}{R_{0}}-\frac{\mu\sigma}{R_{0}}\left(R_{0}-1\right)-\frac{\mu}{\beta}(R_{0}-1))$.
+
+\newpage{}
 
 
 \section*{Appendix: derivation of the equation \ref{eq:force-1}}
