--- a/article_JDZ_MC/version02/model_ver06.tex
+++ b/article_JDZ_MC/version02/model_ver06.tex
@@ -908,7 +908,7 @@ the global persistence time gets an increase, the global extinction
 rate of metapopulation goes down and the number of local extinction
 goes up. Due to the result about local extinction, we also affirm
 that disease is always available in metapopulation if and only if
-at least one subpopulaiton is not extinct.\textbf{ }
+at least one subpopulaiton is not extinct.
 
 Our finding has specified the two main factors influencing the persistence
 ability of an infectious disease. One factor is transmission characteristics
